--- a/src/shared/ui/components/footer/Footer.module.scss
+++ b/src/shared/ui/components/footer/Footer.module.scss
@@ -3,7 +3,156 @@
 .footer {
   padding: 60px 0;
   background: #040213;
+  &__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 32px;
+    margin-bottom: 24px;
+    @include tablet {
+      flex-direction: column;
+    }
+  }
+  &__col_1 {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    @include tablet {
+      width: 100%;
+      align-items: center;
+    }
+    .logo {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 12px;
+      align-self: stretch;
+      p {
+        color: $light;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        @include tablet {
+          text-align: center;
+        }
+      }
+    }
+    .address {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      align-self: stretch;
+      .title {
+        color: rgba(128, 128, 128, 0.5);
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        @include tablet {
+          text-align: center;
+        }
+      }
+      p {
+        color: #fff;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        @include tablet {
+          text-align: center;
+        }
+      }
+    }
+    .contact {
+      color: $light;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      @include tablet {
+        text-align: center;
+      }
+      a {
+        color: $accent;
+        text-decoration: underline;
+      }
+    }
+    .social {
+      display: flex;
+      justify-content: flex-start;
+      @include tablet {
+        justify-content: center;
+      }
+      a {
+        display: flex;
+        padding: 5px 10px;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+        border-radius: 6px;
+        background: #fff;
+        img {
+          width: 64px;
+          height: auto;
+        }
+      }
+    }
+  }
+  &__col_2 {
+    width: 70%;
+    display: flex;
+    gap: 32px;
+    justify-content: flex-end;
+    @include tablet {
+      width: 100%;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    .menu {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      @include tablet {
+        width: 45%;
+      }
+      h3 {
+        color: $light;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+      }
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        li {
+          a {
+            color: #fff;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+          }
+        }
+      }
+    }
+  }
+  &__divider {
+    width: 100%;
+    height: 1px;
+    align-self: stretch;
+    background: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 0.02) 0%,
+      rgba(255, 255, 255, 0.1) 50%,
+      rgba(255, 255, 255, 0.02) 100%
+    );
+  }
   &__copy {
+    margin-top: 24px;
     p {
       color: rgba(128, 128, 128, 0.5);
       text-align: center;
