Add hover styles to CtaBlock and Button components
- Implemented hover effects for the CtaBlock component, enhancing user interaction with a border and background color change.
- Added hover styles to the primary and secondary button variants, improving visual feedback on user actions.

--- a/src/shared/ui/components/cta-block/CtaBlock.module.scss
+++ b/src/shared/ui/components/cta-block/CtaBlock.module.scss
@@ -91,6 +91,11 @@
       justify-content: center;
       align-items: center;
       gap: 10px;
+      &:hover {
+        border: 1px solid rgba(255, 255, 255, 0.12);
+        background: #0a052f;
+        color: #fff;
+      }
     }
   }
 }
