--- a/src/shared/ui/components/header/Header.module.scss
+++ b/src/shared/ui/components/header/Header.module.scss
@@ -43,6 +43,9 @@
       font-style: normal;
       font-weight: 400;
       line-height: normal;
+      &:hover {
+        color: $accent;
+      }
     }
   }
 
