--- a/src/shared/ui/components/header/Header.module.scss
+++ b/src/shared/ui/components/header/Header.module.scss
@@ -4,6 +4,7 @@
   background-color: #090909;
   position: relative;
   padding: 16px 0;
+  z-index: 100;
   &__container {
     padding: 14px 100px;
     @include tablet {
